backend_main_django/kubernetes/my_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: max
spec:
  containers:
    - name: max-dgango
      image: django_app
      command: ["/bin/sh", "-c"]
      args: ["/usr/local/bin/python /code/manage.py clearsessions"]
      imagePullPolicy: Never
  restartPolicy: Never








#      args:
#        - /usr/local/bin/python;
#        - /code/manage.py migrate;
#      command:
#        - /usr/local/bin/python
#        - /code/manage.py
#        - clearsessions
