backend_main_django/kubernetes/full_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: full-deployment
  namespace: default
  labels:
    app: full-django-ingress
spec:
  selector:
    matchLabels:
      app: full-django-ingress
  template:
    metadata:
      labels:
        app: full-django-ingress
    spec:
      containers:
      - name: django-deploy
        image: django_app
        ports:
          - containerPort: 80
        imagePullPolicy: Never

      - name: tomcat
        image: tomcat:8.5.38
        ports:
          - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-second-ingress
  labels:
    app: my-second-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: second-ingress
  template:
    metadata:
      labels:
        app: second-ingress
    spec:
      containers:
      - name: second-ingress
        image: gcr.io/google-samples/hello-app:1.0
        ports:
          - containerPort: 8082

---
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  namespace: default
  labels:
    env: prod
    owner: AnikeevMaks
spec:
  type: ClusterIP
  selector:
    app: full-django-ingress
  ports:
    - name: django-listener
      protocol: TCP
      port: 6666
      targetPort: 80

    - name: tom-listener
      protocol: TCP
      port: 8888
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: second-ingress-service
  labels:
    env: prod
    owner: AnikeevMaks
spec:
  ports:
    - port: 8080
      nodePort: 30005
  type: NodePort
  selector:
    app: second-ingress
