backend_main_django/kubernetes/kuber_domen_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-domen-deployment
  labels:
    app: django-app
spec:
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-domen-deploy
          image: anikeevmaks/kuber-django:first
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: django-domen-service
  labels:
    env: prod
    owner: AnikeevMaks
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
    - name: django-domen-listener
      protocol: TCP
      port: 8888
      targetPort: 80
      nodePort: 30291
