backend_main_django/kubernetes/my_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: max-deployment
  labels:
    app: my-django-app
spec:
  selector:
    matchLabels:
      app: my-django-app
  template:
    metadata:
      labels:
        app: my-django-app
    spec:
      containers:
        - name: django-deploy
          image: django_app
          ports:
            - containerPort: 80
          imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    env: prod
    owner: AnikeevMaks
spec:
  type: NodePort
  selector:
    app: my-django-app
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
