backend_main_django/kubernetes/full_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appingress
spec:
  rules:
    - host: star-burger.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-service
                port:
                  number: 6666

          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: second-ingress-service
                port:
                  number: 8080

    - host: additional
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-service
                port:
                  number: 8888
